chore: Update alert message for incorrect name input in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             let date_name = prompt('What is your name?');
             
             if (date_name.toLowerCase() === 'sherlyn' || date_name.toLowerCase() === 'joy' || date_name.toLowerCase() === 'sherlyn joy' || date_name.toLowerCase() === 'joy sherlyn'){
-                alert('See you on Sunday! 😂');
+                alert('See you on Sunday! ❤️');
             } else {
                 alert(`Sorry ${date_name}, Wrong girl. I am looking for a girl named Sherlyn Joy.`);
             }
